@@ -1,4 +1,4 @@
-;;; nethack.el --- run Nethack as a subprocess
+;;; nethack.el --- run Nethack as a subprocess -*- lexical-binding:t -*-
 
 ;; Copyright (C) 2003,2005  Ryan Yeske and Shawn Betts
 
